--- a/index.css
+++ b/index.css
@@ -4,9 +4,11 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
+
 body {
     background: #080808;
     color: #fff;
@@ -14,8 +16,8 @@ body {
 
 #header {
     width: 100%;
-    height: 100vh;
-    background-image: url(img/bg.jpg);
+    height: 50vh;
+    background-image: url(images/background.png);
     background-size: cover;
     background-position: center;
 }
@@ -26,13 +28,9 @@ body {
 
 nav {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-wrap: wrap;
-}
-
-.logo {
-    width: 140px;
+    align-items: center;
+    justify-content: space-around;
 }
 
 nav ul li {
@@ -41,167 +39,55 @@ nav ul li {
     display: inline-block;
 }
 
+.logo {
+    width: 140px;
+}
+
 nav ul li a {
-    text-decoration: none;
     color: #fff;
-    font-size: 18px;
+    text-decoration: none;
     position: relative;
+    font-size: 18px;
 }
 
 nav ul li a::after {
-    content: '';
-    background: #ff004f;
-    height: 3px;
     width: 0;
-    bottom: -6px;
     left: 0;
+    bottom: -6px;
     position: absolute;
     transition: 0.5s;
+    content: '';
+    background: rgb(34, 201, 12);
+    height: 3px;
 }
 
 nav ul li a:hover::after {
     width: 100%;
 }
 
-.header-text {
-    margin-top: 20%;
-    font-size: 30px;
-}
-
-.header-text h1 {
-    font-size: 60px;
-    margin-top: 20px;
-}
-
-.header-text h1 span {
-    color: #ff004f;
-}
-
 /* about */
-#about {
-    padding: 80px 0;
-    color: #ababab;
+span {
+    
+    font-size: 25px;
+}
+h1 .h1{
+    text-align: center;
+}
+.header h1 {
+    font-weight: bolder;
+    font-style: italic;
+    font-size: 35px;
 }
 
-.row {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.about-col-1 {
-    flex-basis: 35%;
-}
-
-.about-col-1 img {
-    border-radius: 15px;
-    width: 100%;
-    /* height: 600px; */
-}
-
-.about-col-2 {
-    flex-basis: 60%;
-}
-
-.sub-title {
-    font-size: 60px;
-    font-weight: 600;
-    color: #fff;
-}
-
-.tab-titles {
-    display: flex;
-    margin: 20px 0 40px;
-}
-
-.tab-link {
-    margin-right: 50px;
+.header p {
     font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
+    font-style: italic;
+    font-weight: bold;
 }
 
-.tab-link::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    left: 0;
-    bottom: -8px;
-    background: #ff004f;
-    position: absolute;
-    transition: 0.5s;
-}
-
-.tab-link.active-link::after {
-    width: 50%;
-}
-
-.tab-contents ul li {
-    list-style: none;
-    margin: 10px 0;
-}
-
-.tab-contents ul li span {
-    font-size: 14px;
-    color: #b54769;
-}
-
-.tab-contents {
-    display: none;
-}
-
-.tab-contents.active-tab {
-    display: block;
-}
-
-#services {
-    padding: 30px 0;
-}
-
-.services-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
-}
-
-.services-list div {
-    font-size: 13px;
-    padding: 40px;
-    background: #262626;
-    font-weight: 300;
-    border-radius: 10px;
-    transform: background 0.5s, transform 0.5s;
-}
-
-.services-list div i {
-    font-size: 50px;
-    margin-bottom: 30px;
-}
-
-.services-list div h2 {
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 15px;
-
-}
-
-.services-list div a {
-    text-decoration: none;
-    font-size: 12px;
-    margin-top: 20px;
-    color: #fff;
-    display: inline-block;
-}
-
-.services-list div:hover {
-    background: #ff004f;
-    transform: translateY(-10px);
-}
-
-#portfolio {
-    padding: 50px 0;
+/* products */
+#products {
+    padding: 100px 0;
 }
 
 .work-list {
@@ -226,7 +112,7 @@ nav ul li a:hover::after {
 .layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), green);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -249,7 +135,7 @@ nav ul li a:hover::after {
 .layer a {
     margin-top: 20px;
     text-decoration: none;
-    color: #ff004f;
+    color: #2bff00;
     font-size: 18px;
     line-height: 60px;
     background: #fff;
@@ -271,7 +157,7 @@ nav ul li a:hover::after {
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #27ff4b;
     padding: 14px 50px;
     border-radius: 6px;
     color: #fff;
@@ -280,7 +166,45 @@ nav ul li a:hover::after {
 }
 
 .btn:hover {
-    background: #ff004f;
+    background: rgb(21, 255, 0);
+}
+
+/* services */
+#services {
+    padding: 30px 0;
+}
+
+.heading {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.heading div {
+    font-size: 13px;
+    padding: 40px;
+    background: #262626;
+    font-weight: 300;
+    border-radius: 10px;
+    transform: background 0.5s, transform 0.5s;
+}
+
+.heading div i {
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+
+.heading div h2 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+
+}
+
+.heading div:hover {
+    background: #ea00ff;
+    transform: translateY(-10px);
 }
 
 /* contact */
@@ -299,7 +223,7 @@ nav ul li a:hover::after {
 .contact-left p i {
     margin-right: 15px;
     font-size: 25px;
-    color: #ff004f;
+    color: #00608d;
 }
 
 .social-icons {
@@ -347,7 +271,6 @@ form .btn2 {
     border-radius: 20px;
     cursor: pointer;
 }
-
 .copyright {
     width: 100%;
     text-align: center;
@@ -365,28 +288,14 @@ nav .fas {
     display: none;
 }
 
-/* css for small screen */
-@media screen and (max-width: 376px) 
- {
-    .about-col-1 img {
-        border-radius: 15px;
-        width: 62%;
-        /* height: 600px; */
-    }
-    .header-text {
-        margin-top: 70%;
-        font-size: 14px;
-    }
-    .header-text h1 {
-        font-size: 25px;
-
-    }
+@media screen and (max-width: 376px) {
     nav .fas {
         display: block;
         font-size: 25px;
     }
+
     nav ul {
-        background: #ff004f;
+        background: #020101;
         top: 0;
         right: -200px;
         width: 200px;
@@ -408,100 +317,23 @@ nav .fas {
         left: 25px;
         cursor: pointer;
     }
-    .sub-title{
+
+    .sub-title {
         font-size: 40px;
     }
-    .about-col-1 , .about-col-2{
+
+    .contact-left,
+    .contact-right {
         flex-basis: 100%;
     }
-    .about-col-1{
-        margin-bottom: 30px;
-    }
-    .about-col-2{
-        font-size: 14px;
-    }
-    .about-col-2 p{
-        font-size: 14px;
-    }
-    .tab-links{
-font-size: 16px;
-margin-right: 20px;
-    }
-    .contact-left , .contact-right {
-        flex-basis: 100%;
-    }
-    .copyright{
+
+    .copyright {
         font-size: 14px;
     }
 }
-#msg{
+
+#msg {
     color: #61b752;
-margin-top: -10px;
-display: block;
-}
-@media screen and (max-width: 600px) 
- {
-    .header-text {
-        margin-top: 100%;
-        font-size: 16px;
-    }
-    .header-text h1 {
-        font-size: 30px;
-
-    }
-    nav .fas {
-        display: block;
-        font-size: 25px;
-    }
-    nav ul {
-        background: #ff004f;
-        top: 0;
-        right: -200px;
-        width: 200px;
-        padding-top: 50px;
-        position: fixed;
-        height: 100vh;
-        z-index: 2;
-        transition: right 0.5s;
-    }
-
-    nav ul li {
-        margin: 25px;
-        display: block;
-    }
-
-    nav ul .fas {
-        position: absolute;
-        top: 25px;
-        left: 25px;
-        cursor: pointer;
-    }
-    .sub-title{
-        font-size: 40px;
-    }
-    .about-col-1 , .about-col-2{
-        flex-basis: 100%;
-    }
-    .about-col-1{
-        margin-bottom: 30px;
-    }
-    .about-col-2{
-        font-size: 14px;
-    }
-    .tab-links{
-font-size: 16px;
-margin-right: 20px;
-    }
-    .contact-left , .contact-right {
-        flex-basis: 100%;
-    }
-    .copyright{
-        font-size: 14px;
-    }
-    
-}
-#msg{
-    color: #61b752;
-margin-top: -10px;
-display: block;
+    margin-top: -10px;
+    display: block;
 }
